# labOOP_3

./: 5-square.h  5-squere.cpp  6-square.h  6-squere.cpp  CMakeList.txt  CMakeLists.txt  array.cpp  array.h  dot.cpp  dot.h  figure.h  main.cpp  rhombus.cpp  rhombus.h  test.cpp
